changed benchmark script